battlecode-2025: builder dispatched (session a0703eb3)